th text-align fix

--- a/codebrag-ui-grunt/styl/index.styl
+++ b/codebrag-ui-grunt/styl/index.styl
@@ -472,6 +472,7 @@ form
       font-size: 1em;
       font-weight: normal;
       padding: 0.77em 1.15em;
+      text-align: left;
   & tbody
     font-size: 13px;
   & .diff-line-code
